$Id$

History for IMDBPHP2
====================

v2.1.10
-------------------
+ introduced the possibility to override config vars using simple *.ini files (see conf/*)
- removed Moviepilot classes (the service is no longer operational via its API)
! fixes to cache.php (listed the same movie over and over)
* doc/README updated

v2.1.9 (19.09.2013)
-------------------
! imdb::alsoknow() and imdb::releaseInfo() were broken due to site changes
! imdbperson::filmograf() missed some character names due to site changes
! imdb::soundtrack() was broken due to site changes
! imdb_person: latest site changes broke all filmografies. fixed.
! imdb: crazy_credits(), goofs(), quotes(), video_sites() broken due to site changes
+ while fixing imdb::video_sites, discovered more similar content on that page: soundclip_sites(), photo_sites() and misc_sites() added
! imdb: trivia(), officialSites() broken due to site changes
! imdb_person: movies_crew() and movies_archive() broken due to site changes

v2.1.8 (26.05.2013)
-------------------
* improvements to the imdb::soundtrack() method. Much better results now :)
+ imdb_person::filmograf() now fills the "addons" information again (for all movie_*() methods)
! imdb_person: articles(), interviews() returned garbage if that information was not available
! Moviepilot changed API-error message, so instead of displaying the according error we had empty result sets
! rewrote movieposterdb::parse_list() -- so now the movie posters, logos, covers, etc. should work again
+ added imdb::orig_title() to retrieve the original movie title (if available; otherwise returns "")
+ added imdb::movie_recommendations() to retrieve the "people who liked this..." movies
* imdb_person::spouse() was missing detail information (most likely due to site changes) -- added them back
! fixed a bunch of notices in person.php and imdb_person.class.php

v2.1.7 (15.05.2013)
-------------------